@@ -7,7 +7,7 @@
             <include>FullscreenDimensions</include>
             <include>OptionsShutdownAnimation</include>
             <control type="group">
-                <visible>Control.IsVisible(54) + !Window.IsActive(albuminformation) + !Window.IsVisible(musicplaylist)</visible>
+                <visible>Control.IsVisible(54) + !Window.IsActive(musicinformation) + !Window.IsVisible(musicplaylist)</visible>
     			<posy>449</posy>
                 <posx>12</posx>
                 <include>BannerListAnimations</include>    			
